# hocus

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  requirements.txt
.dosemu/: .dosemurc
.dosemu/drive_c/: userhook.bat
include/: common.h  decls.h  defs.h  design.h  digisnd.h  features.h  fileio.h  globals.h  gr.h  hocus.h  joystick.h  menus.h  play.h  play2.h  soundfx.h  types.h  util.h
port/: CMakeLists.txt  port.c  port.h
src/: borland.c  design.c  digisnd.c  features.c  fileio.c  globals.c  gr.c  hocus.c  joystick.c  memcpy.asm  menus.c  play.c  play2.c  seg012.asm  seg014.asm  soundfx.c  util.c  video.asm
tools/: diff.py
tools/ida/: data2c.py  disassemble.py  idaxml.py  offset.py
tools/splat_ext/dos/: asm.py  bss.py  data.py  disassembler.py
versions/demo10/: hocus.rsp  hocus.yaml
versions/demo11/: hocus.rsp  hocus.yaml
versions/proto/: hocus.rsp  hocus.yaml
versions/share/: hocus.rsp  hocus.yaml
versions/v10/: hocus.rsp  hocus.yaml
versions/v11/: hocus.rsp  hocus.yaml
